--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,11 @@ h1,h2,h3, h5 {
   stroke-width: 1.5px;
 }
 
-#conclusion {
+#conclusion{
   width:80%;
-  margin-top: -250px;
+  margin-top: -300px;
+}
+
+#reference{
+  width:80%;
 }
