--- a/style/style.css
+++ b/style/style.css
@@ -139,9 +139,12 @@ h1,h2,h3, h5 {
 
 #conclusion{
   width:80%;
+  height:300px;
   margin-top: -300px;
+  margin-left: 150px;
 }
 
 #reference{
   width:80%;
+  margin-left: 150px;  
 }
